# suanPan

./: .config.cmake  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  snapcraft.yaml  suanPan.cpp  suanPan.h
Constraint/: Constraint.cpp  Constraint.h  MPC.cpp  MPC.h  Tie.cpp  Tie.h
Constraint/BC/: BC.cpp  BC.h
Constraint/Criterion/: Criterion.cpp  Criterion.h  MaxDisplacement.cpp  MaxDisplacement.h  MinDisplacement.cpp  MinDisplacement.h
Converger/: AbsDisp.cpp  AbsDisp.h  AbsError.cpp  AbsError.h  AbsIncreDisp.cpp  AbsIncreDisp.h  AbsIncreEnergy.cpp  AbsIncreEnergy.h  AbsResidual.cpp  AbsResidual.h  CMakeLists.txt  Converger.cpp  Converger.h  RelDisp.cpp  RelDisp.h  RelError.cpp  RelError.h  RelIncreDisp.cpp  RelIncreDisp.h  RelIncreEnergy.cpp  RelIncreEnergy.h  RelResidual.cpp  RelResidual.h
Database/: Database.cpp  Database.h  HDF.cpp  HDF.h  SQL.cpp  SQL.h
Developer/Element/: CMakeLists.txt  ElementExample.cpp  ElementExample.h
Developer/Material/: CMakeLists.txt  MaterialExample.cpp  MaterialExample.h
Developer/ModuleBundle/: CMakeLists.txt
Developer/Section/: CMakeLists.txt  SectionExample.cpp  SectionExample.h
Domain/: Domain.cpp  Domain.h  DomainBase.cpp  DomainBase.h  ExternalModule.cpp  ExternalModule.h  Factory.hpp  Node.cpp  Node.h  Tag.cpp  Tag.h
Domain/MetaMat/: BandMat.hpp  BandSymmMat.hpp  CMakeLists.txt  FullMat.hpp  MetaMat  MetaMat.hpp  SparseMat.hpp  SparseSymmMat.hpp  SymmPackMat.hpp  comparator.hpp  csc_form.hpp  csr_form.hpp  operator_times.hpp  sparse_form.hpp  triplet_form.hpp
Element/: CMakeLists.txt  Element  Element.cpp  Element.h  ElementBase.cpp  ElementBase.h  ElementParser.cpp  ElementParser.h  ElementTag.h  ElementTemplate.cpp  ElementTemplate.h  MaterialElement.cpp  MaterialElement.h  SectionElement.cpp  SectionElement.h
Element/Beam/: B21.cpp  B21.h  B21H.cpp  B21H.h  EB21.cpp  EB21.h  F21.cpp  F21.h  F21H.cpp  F21H.h  MVLEM.cpp  MVLEM.h  MVLEM.tex
Element/Cube/: C3D20.cpp  C3D20.h  C3D8.cpp  C3D8.h
Element/Membrane/: CMakeLists.txt  CP3.cpp  CP3.h  CP4.cpp  CP4.h  CP6.cpp  CP6.h  CP8.cpp  CP8.h  GCMQ.cpp  GCMQ.h  GCMT.cpp  GCMT.h  GQ12.cpp  GQ12.h  Membrane  PS.cpp  PS.h  QE2.cpp  QE2.h  RCP4.cpp  RCP4.h  RGCMQ.cpp  RGCMQ.h  RebarLayer.cpp  RebarLayer.h  RebarLayer2.cpp  RebarLayer2.h
Element/Plate/: CMakeLists.txt  Mindlin.cpp  Mindlin.h  Plate
Element/Shell/: CMakeLists.txt  RGCMS.cpp  RGCMS.h  S3.cpp  S3.h  S4.cpp  S4.h  Shell
Element/Special/: Damper01.cpp  Damper01.h  Mass.cpp  Mass.h  SingleSection.cpp  SingleSection.h  Spring01.cpp  Spring01.h
Element/Truss/: T2D2.cpp  T2D2.h  T3D2.cpp  T3D2.h
Element/Utility/: MatrixModifier.cpp  MatrixModifier.h
Example/: B21.supan  B21H.supan  C3D20.supan  C3D8.supan  CDP.supan  CDPM2.supan  CDPPS.supan  CONCRETE01.supan  CONCRETE21.supan  COOK1.supan  COOK2.supan  COOK4.supan  CP6.supan  CP8.supan  CPS3.supan  CPS4L.supan  CPS4N100.supan  CPS4N50.supan  CPS4NL.supan  CURVEDBEAM.supan  DAMPER01.supan  DC.supan  DISTORTION.supan  DYNAMIC.supan  EB21.supan  F21.supan  F21H.supan  GCMQ.supan  IREGULARBEAM.supan  LEE.FRAME.supan  LOOP.txt  LOOP2.txt  LOOP3.txt  MACNEAL.supan  MATERIAL1D.supan  PATCH.supan  RCP4.supan  RL.supan  SHALLOW.ARC.supan  SINGLESECTION.supan  (+2 more)
Include/: mpl-master.7z
Include/armadillo/: armadillo  wrapper.cpp
Include/hdf5-gcc-linux/: H5pubconf.h
Include/hdf5-gcc-win/: H5pubconf.h
Include/hdf5-vs/: H5pubconf.h
Include/magma/: magma.h  magma_auxiliary.h  magma_batched.h  magma_bulge.h  magma_c.h  magma_cbatched.h  magma_cbulge.h  magma_cbulgeinc.h  magma_cgehrd_m.h  magma_clapack.h  magma_copy.h  magma_copy_v1.h  magma_cvbatched.h  magma_d.h  magma_dbatched.h  magma_ds.h  (+57 more)
Load/: Acceleration.cpp  Acceleration.h  CLoad.cpp  CLoad.h  Displacement.cpp  Displacement.h  Load.cpp  Load.h
Material/: CMakeLists.txt  Material.cpp  Material.h  MaterialParser.cpp  MaterialParser.h  MaterialTag.h  MaterialTemplate.cpp  MaterialTemplate.h
Recorder/: ElementRecorder.cpp  ElementRecorder.h  NodeRecorder.cpp  NodeRecorder.h  OutputType.cpp  OutputType.h  Recorder.cpp  Recorder.h
Resource/: resource.h  suanPan.rc  suanPan_gcc.rc
Section/: CMakeLists.txt  ParameterType.cpp  ParameterType.h  Section.cpp  Section.h  SectionParser.cpp  SectionParser.h  SectionTag.h
Solver/: Arnoldi.cpp  Arnoldi.h  BFGS.cpp  BFGS.h  CMakeLists.txt  MPDC.cpp  MPDC.h  Newton.cpp  Newton.h  Ramm.cpp  Ramm.h  Solver.cpp  Solver.h
Step/: ArcLength.cpp  ArcLength.h  Bead.cpp  Bead.h  Buckle.cpp  Buckle.h  Dynamic.cpp  Dynamic.h  Frequence.cpp  Frequence.h  Static.cpp  Static.h  Step.cpp  Step.h
Toolbox/: ClassTag.h  IntegrationPlan.cpp  IntegrationPlan.h  PropertyType.h  RCM.cpp  RCM.h  argumentParser.cpp  argumentParser.h  arpack_wrapper.cpp  arpack_wrapper.h  blas-src.7z  commandParser.cpp  commandParser.h  debug.cpp  debug.h  lapack-src.7z  shapeFunction.hpp  superlu-src.7z  tensorToolbox.cpp  tensorToolbox.h  utility.cpp  utility.h
Toolbox/arpack-src/: CMakeLists.txt
(+511 files in other folders)
